objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ATT_MASCONT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATT（MASCONT等）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attack_how__c</fullName>
        <label>How（どのように攻めるのか？）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attack_what__c</fullName>
        <label>What(何を売る/提案するのか　備考・その他）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Catalog1__c</fullName>
        <description>配布したカタログを一覧から選択して下さい。</description>
        <inlineHelpText>配布したカタログを一覧から選択して下さい。</inlineHelpText>
        <label>カタログ配布</label>
        <picklist>
            <picklistValues>
                <fullName>増税前プレミアム割キャンペーン</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Catatext__c</fullName>
        <description>配布時の感想等記載ください</description>
        <inlineHelpText>配布時の感想等記載ください</inlineHelpText>
        <label>カタログ配布時の備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimate_ONOFF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>見積提出　ON/OFF</description>
        <inlineHelpText>見積を提出したらチェックを入れて下さい。</inlineHelpText>
        <label>見積提出済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_date__c</fullName>
        <description>見積を提出した日付</description>
        <inlineHelpText>見積を提出した日付を記入して下さい。</inlineHelpText>
        <label>見積提出日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_nember__c</fullName>
        <description>見積番号</description>
        <inlineHelpText>見積番号を入力して下さい。</inlineHelpText>
        <label>見積番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カウント</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>Owner:User.Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部署略称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <description>見積金額(税抜)</description>
        <inlineHelpText>見積金額(税抜)を入力して下さい。
数字のみ入力して下さい。(\、．は不要)</inlineHelpText>
        <label>見積金額(税抜)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liked__c</fullName>
        <description>画面のThanks!ボタンを押下すると「Thanks」を設定
※Thanks!が設定されない：取引先責任者編集権限有無を要確認</description>
        <inlineHelpText>Thanks!ボタンを押下しても「Thanks!」が設定されない場合は、IT本部(内:3769)にご連絡下さい。</inlineHelpText>
        <label>Thanks!</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_SVC__c</fullName>
        <label>販促備考欄</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UnitBodyCheck__c</fullName>
        <formula>LEFT( WhatId , 3) = &quot;a0T&quot;</formula>
        <label>本体号機の活動</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>attack_why__c</fullName>
        <label>Why(なぜ刺さると思うのか？）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jpcsm_hk__SF_UPDATE_VISIT__c</fullName>
        <formula>HYPERLINK(&quot;https://ap.salesforce.com/&quot;&amp; Id &amp;&quot;/e?retURL=&quot;,&quot;訪問結果登録&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>活動更新</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jpcsm_hk__related_record__c</fullName>
        <formula>IF(AND(ISBLANK(WhoId),ISBLANK(WhatId)) , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>名前／関連先あり</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kakudo__c</fullName>
        <description>ZU作業完了
Z100%
A100～90
B90～70
C70～50
D50～30</description>
        <inlineHelpText>ZU:作業完了
Z：100%
A：100%～90%
B：90%～70%
C：70%～50%
D：50%～30%</inlineHelpText>
        <label>受注確度</label>
        <picklist>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>kanryou__c</fullName>
        <description>作業完了日（工確サイン日）を入力します。</description>
        <inlineHelpText>作業完了日（工確サイン日）を入力します。</inlineHelpText>
        <label>作業完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>krt__c</fullName>
        <description>2015/12/25　営業管理依頼により追加</description>
        <label>系列</label>
        <picklist>
            <picklistValues>
                <fullName>EO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>全社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>理科学</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>mitumori_select__c</fullName>
        <description>見積種別を選択して下さい。</description>
        <inlineHelpText>見積種別を選択して下さい。</inlineHelpText>
        <label>見積種別</label>
        <picklist>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>移転</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>設置室</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>周辺機器</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <description>2015/12/25　営業管理依頼により追加</description>
        <label>装置</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>progress_status__c</fullName>
        <label>進捗状況</label>
        <picklist>
            <picklistValues>
                <fullName>行動計画作成</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談中（提案済み）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仮受注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>受注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談流れ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談中（見積提示済み）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>下期_行動計画作成</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>下期_商談中(提案済)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>下期_商談中(見積提示済)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>下期_仮受注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>下期_受注</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>下期_商談流れ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>progress_status_text__c</fullName>
        <label>進捗状況（説明）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>proposal_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>proposal_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>旧チラー置き換え</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>proposal_03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NR提案</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>yotei__c</fullName>
        <description>売上予定の月を入力します。
日は適当で構いません。</description>
        <inlineHelpText>売上予定の月を入力します。
日は適当で構いません。</inlineHelpText>
        <label>売上予定月</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>